--- a/requirements.txt
+++ b/requirements.txt
@@ -1,307 +1,6 @@
-﻿absl-py==1.4.0
-aiofiles==22.1.0
-aiohttp==3.8.5
-aiosignal==1.3.1
-aiosqlite==0.19.0
-altair==4.2.2
-altgraph==0.17.3
-analytics-python==1.4.post1
-annotated-types==0.5.0
-ansi2html==1.8.0
-anyio==3.7.1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asgiref==3.6.0
-astroid==2.15.1
-asttokens==2.2.1
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs==23.1.0
-azure-core==1.29.4
-azure-storage-blob==12.17.0
-Babel==2.12.1
-backcall==0.2.0
-backoff==1.10.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-blinker==1.6.2
-branca==0.6.0
-cachetools==5.3.0
-category-encoders==2.6.2
-certifi==2022.12.7
-cffi==1.15.1
-chardet==5.2.0
-charset-normalizer==3.1.0
-click==8.1.3
-cloudpickle==2.2.1
-colorama==0.4.6
-comm==0.1.3
-contourpy==1.0.7
-cryptography==40.0.2
-cycler==0.11.0
-Cython==3.0.2
-dash==2.13.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dataclasses-json==0.5.14
-debugpy==1.6.7
-decorator==5.1.1
-decouple==0.0.7
-defusedxml==0.7.1
-deprecation==2.1.0
-dill==0.3.6
-Django==4.2.1
-django-crispy-forms==2.0
-django-debug-toolbar==4.1.0
-django-discover-runner==1.0
-django-model-utils==4.3.1
-django-role-permissions==3.1.1
-django-taggit==4.0.0
-django-widget-tweaks==1.4.12
-entrypoints==0.4
-entsoe-py==0.5.9
-et-xmlfile==1.1.0
-executing==1.2.0
-Faker==19.3.0
-fastjsonschema==2.18.0
-favicon==0.7.0
-Flask==2.2.5
-flatbuffers==23.5.26
-folium==0.14.0
-fonttools==4.39.3
-fpdf==1.7.2
-fqdn==1.5.1
-frozenlist==1.4.0
-gast==0.4.0
-geographiclib==2.0
-geopy==2.3.0
-gitdb==4.0.10
-GitPython==3.1.31
-google-auth==2.19.1
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-graphviz==0.20.1
-greenlet==2.0.2
-grpcio==1.54.2
-h3==3.7.6
-h5py==3.8.0
-htbuilder==0.6.1
-idna==3.4
-imbalanced-learn==0.11.0
-importlib-metadata==6.6.0
-instaloader==4.9.6
-ipykernel==6.23.1
-ipython==8.14.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.0
-isodate==0.6.1
-isoduration==20.11.0
-isort==5.12.0
-itsdangerous==2.1.2
-jax==0.4.11
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-jupyter-events==0.7.0
-jupyter-ydoc==0.2.5
-jupyter_client==7.4.9
-jupyter_core==5.3.0
-jupyter_server==2.7.2
-jupyter_server_fileid==0.9.0
-jupyter_server_terminals==0.4.4
-jupyter_server_ydoc==0.8.0
-jupyterlab==3.6.5
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-jupyterlab_server==2.24.0
-kaleido==0.2.1
-keras==2.12.0
-kiwisolver==1.4.4
-langchain==0.0.292
-langsmith==0.0.37
-lazy-object-proxy==1.9.0
-libclang==16.0.0
-lightgbm==4.0.0
-llvmlite==0.40.1
-lxml==4.9.3
-Markdown==3.4.3
-markdown-it-py==2.2.0
-markdownlit==0.0.7
-MarkupSafe==2.1.2
-marshmallow==3.20.1
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mdurl==0.1.2
-mistune==3.0.1
-mitoinstaller==0.0.238
-mitosheet==0.1.504
-ml-dtypes==0.1.0
-mne==1.4.0
-monotonic==1.6
-more-itertools==10.1.0
-mpmath==1.3.0
-multidict==6.0.4
-mypy-extensions==1.0.0
-nbclassic==1.0.0
-nbclient==0.8.0
-nbconvert==7.7.4
-nbformat==5.9.2
-nest-asyncio==1.5.6
-nltk==3.8.1
-notebook==6.5.5
-notebook_shim==0.2.3
-ntlm-auth==1.5.0
-numba==0.57.1
-numexpr==2.8.6
-numpy==1.24.4
-oauthlib==3.2.2
-openai==0.27.0
-opencv-python==4.8.0.76
-openpyxl==3.1.2
-opt-einsum==3.3.0
-orjson==3.9.5
-overrides==7.4.0
-packaging==23.1
-pandas==1.5.3
-pandocfilters==1.5.0
-parso==0.8.3
-patsy==0.5.3
-pbr==5.11.1
-pefile==2023.2.7
-phonenumbers==8.13.19
-pickleshare==0.7.5
-Pillow==9.4.0
-platformdirs==3.2.0
-plotly==5.14.1
-plotly-resampler==0.9.1
-ply==3.11
-pmdarima==2.0.3
-pooch==1.7.0
-prometheus-client==0.17.1
-prompt-toolkit==3.0.38
-protobuf==3.20.3
-psutil==5.9.5
-pure-eval==0.2.2
-pvlib==0.10.1
-pyarrow==11.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycaret==3.0.0rc8
-pycparser==2.21
-pycryptodome==3.18.0
-pydantic==2.3.0
-pydantic_core==2.6.3
-pydeck==0.8.1b0
-Pygments==2.15.1
-pyinstaller==5.10.1
-pyinstaller-hooks-contrib==2023.2
-pylint==2.17.1
-pymdown-extensions==10.1
-Pympler==1.0.1
-pyod==1.1.0
-pyparsing==3.0.9
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-json-logger==2.0.7
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0.1
-pyzmq==24.0.1
-referencing==0.30.2
-regex==2023.8.8
-requests==2.28.2
-requests-ntlm==1.1.0
-requests-oauthlib==1.3.1
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.3.4
-rpds-py==0.9.2
-rsa==4.9
-rustworkx==0.12.1
-schemdraw==0.17
-scikit-base==0.5.1
-scikit-learn==1.1.3
-scikit-plot==0.3.7
-semantic-version==2.8.5
-semver==3.0.1
-Send2Trash==1.8.2
-simplejson==3.19.1
-six==1.16.0
-sklearn==0.0.post5
-sktime==0.22.0
-smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.4.1
-st-annotated-text==4.0.0
-stack-data==0.6.2
-statsforecast==1.1.1
-statsmodels==0.14.0
-stevedore==5.0.0
-streamlit==1.26.0
-streamlit-camera-input-live==0.2.0
-streamlit-card==0.0.61
-streamlit-embedcode==0.1.2
-streamlit-extras==0.3.0
-streamlit-faker==0.0.2
-streamlit-folium==0.13.0
-streamlit-image-coordinates==0.1.6
-streamlit-keyup==0.2.0
-streamlit-marquee==0.0.7
-streamlit-option-menu==0.3.6
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==1.0.2
-sympy==1.11.1
-tbats==1.1.3
-tenacity==8.2.2
-tensorboard==2.12.3
-tensorboard-data-server==0.7.0
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-termcolor==2.3.0
-terminado==0.17.1
-text-unidecode==1.3
-threadpoolctl==3.1.0
-timezonefinder==6.2.0
-tinycss2==1.2.1
-tk==0.1.0
-toml==0.10.2
-tomlkit==0.11.7
-toolz==0.12.0
-tornado==6.3.1
-tqdm==4.65.0
-trace-updater==0.0.9.1
-traitlets==5.9.0
-tsdownsample==0.1.2
-typing-inspect==0.9.0
-typing_extensions==4.7.1
-tzdata==2023.3
-tzlocal==4.3
-uri-template==1.3.0
-urllib3==1.26.15
-validators==0.20.0
-vega-datasets==0.9.0
-vyper==0.2.15
-watchdog==3.0.0
-wcwidth==0.1.7
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.5.1
-websockets==11.0.2
-Werkzeug==2.2.3
-widgetsnbextension==4.0.8
-wrapt==1.14.1
-XlsxWriter==3.0.2
-y-py==0.6.0
-yarl==1.9.2
-yellowbrick==1.5
-ypy-websocket==0.8.4
-zipp==3.15.0
+streamlit
+numpy
+pandas
+matplotlib
+seaborn
+scikit-learn
